<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fdanielpm.petagram.MailActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombreCompleto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/capture_nombre"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capture_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilComentario">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capture_comment"
       />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMail"
        android:id="@+id/btnMail" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        ></LinearLayout>
</LinearLayout>
